Make sure text box is always covered by textarea

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 .text-container {
   position: relative;
+  min-height: 100%;
 }
 
 .output,
